# asteroids

./: .gitmodules  CMakeLists.txt  README.md  build.sh
include/: petrichor_colour.h  petrichor_math.h  petrichor_mem.h  petrichor_time.h
src/common/: petrichor_math.cpp  petrichor_mem.cpp
src/core/: vendor_impl.cpp
src/core/graphics/: renderer.h  vertex.h
src/core/graphics/backends/dx12/: dx12_renderer.cpp  dx12_renderer.h
src/core/graphics/backends/vulkan/: vulkan_renderer.cpp  vulkan_renderer.h
src/core/platform/win32/: win32_common.h  win32_main.cpp  win32_mem.cpp  win32_renderer.cpp  win32_time.cpp
src/game/: game.h
